--- a/apps/web/src/app/globals.css
+++ b/apps/web/src/app/globals.css
@@ -80,3 +80,15 @@
     @apply bg-background text-foreground;
   }
 }
+/* Classes to have no scrollbar */
+/* Chrome, Safari and Opera */
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+.no-scrollbar {
+  -ms-overflow-style: none;
+  /* IE and Edge */
+  scrollbar-width: none;
+  /* Firefox */
+}
